--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -135,6 +135,8 @@
 
             if (difficulty == 3) {
                 $('.box-effects.answer').not('.fulltext').hide();
+            } else {
+                $('.box-effects.answer.fulltext').hide();
             }
 
             $('.transparent-light').fadeOut(500);
