--- a/www/css/style.less
+++ b/www/css/style.less
@@ -10,7 +10,7 @@
 @green: #8BC34A;
 @gold: #FFC107;
 @red: #F44336;
-@progress-bar-color: #11A092;
+@progress-bar-color: @red;
 @shadow-color: rgba(0,0,0,.1);
 
 @font-light: "Segoe UI light";
@@ -164,8 +164,18 @@ h1 {
 }
 
 .box-content {
-  padding: 0 20px;
   text-align: justify;
+  padding: 0 20px;
+}
+
+.box-content input[type="text"] {
+  height: 100%;
+  width: 100%;
+  margin-left: -20px;
+  padding: inherit;
+  border: 0;
+  vertical-align: top;
+  font-size: @font-size-big;
 }
 
 .box-content-name {
@@ -199,14 +209,12 @@ h1 {
   padding: 0 10px;
   text-align: center;
   color: darken(@control-dark-color, 50%);
-  .border(1px, 1px);
 }
 
 .progress-bar {
   color: @progress-bar-color;
   background: @control-medium-color;
-  height: 3px;
-  .border(0,0,1px);
+  height: 8px;
 }
 
 .progress {
@@ -307,11 +315,15 @@ h1 {
 /* --- STATISTICS --- */
 /**********************/
 #stats-container {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+   width: 100%;
+   height: 100%;
+   margin: 0;
+   padding: 0;
+   text-align: center;
+   display: table;
+ }
+#stats-container div {
+  text-align: -webkit-center;
 }
 
 #result-container {
@@ -320,6 +332,22 @@ h1 {
   margin: 0;
   padding: 0;
   text-align: center;
+}
+
+.slide-to-stats {
+  box-sizing: border-box;
+  padding: 10px 70px;
+  background: lighten(#FFC107, 15%);
+  @font-normal: "Segoe UI";
+  @font-size-normal: 1em;
+
+  &:hover {
+    background: #FFC107;
+  }
+
+  &:active {
+    background: lighten(#FFC107, 15%);
+  }
 }
 
 .resultbar {
