#6 dodělávky statistik.  Potřeba udělat načítání statistik z databáze

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -153,16 +153,16 @@ h1 {
 }
 
 .correctAnswer {
-  background: lighten(@gold, 10%);
+  background: lighten(@green, 10%);
   &:hover *:not(.box-content-label){
-    background: @gold;
+    background: lighten(@green, 10%);
   }
 }
 
 .wrongAnswer {
   background: lighten(@red, 10%);
   &:hover *:not(.box-content-label){
-    background: @red;
+    background: lighten(@red, 10%);
   }
 }
 
